fix side-nav text overflow

--- a/public/stylesheets/partials/side-nav.css
+++ b/public/stylesheets/partials/side-nav.css
@@ -1,5 +1,5 @@
 #side-nav {
-  
+
 }
 
 #logoImg {
@@ -10,6 +10,9 @@
 
 .sideLinks {
   font-weight: bold !important;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #logoLi {
